--- a/InternalBookingApp/appsettings.json
+++ b/InternalBookingApp/appsettings.json
@@ -1,1 +1,12 @@
-// appsettings.json placeholder content
+{
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=InternalBookingAppDb;Trusted_Connection=True;"
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "AllowedHosts": "*"
+}
