--- a/InternalBookingApp/appsettings.json
+++ b/InternalBookingApp/appsettings.json
@@ -1,7 +1,9 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=InternalBookingAppDb;Trusted_Connection=True;"
+    "DefaultConnection": "Server=localhost;Database=InternalBookingDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
+
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
